textures done (#11)
* textures done

* cmnts removed